--- a/content/modules/ROOT/pages/step-04.adoc
+++ b/content/modules/ROOT/pages/step-04.adoc
@@ -2,6 +2,7 @@
 
 == Inventory
 === Additional hosts
+[source,init,role=execute,subs=attributes+]
 ----
     win:
       hosts:
@@ -12,6 +13,7 @@
           ansible_password: "{{ ad_admin_password }}"
 ----
 === Additional variables
+[source,init,role=execute,subs=attributes+]
 ----
 ### Windows DNS
     ad_ip: "192.168.{{ third }}.5" # AD IP
@@ -32,6 +34,7 @@
     ad_admin_password: "{{ admin_password }}" # AD administrator password
 ----
 === Current
+[source,init,role=execute,subs=attributes+]
 ----
 all:
   children:
@@ -50,9 +53,9 @@ all:
         client9.{{ shortname }}.example.opentlc.com:
   vars:
 # Global variables
-    admin_password: 'C0pper_99' # Administrator password used for all applications
+    admin_password: "{admin_pass}" # Administrator password used for all applications
     root_domain: "example.opentlc.com" # Root domain (also used as Windows domain)
-    shortname: {guid} # Sub-domain
+    shortname: "{guid}" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
     third: "9" # Third octect of subnet used.
     user_password: "Redhat123"
@@ -132,6 +135,7 @@ all:
 ----
 
 == Server playbook
+[source,init,role=execute,subs=attributes+]
 ----
 ---
 # Promotes Windows server to DC, creates users and group, and delegates IdM DNS zone
