--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -5,3 +5,27 @@
 * xref:module-02.adoc[2. GitHub Sourced Container]
 ** xref:module-02.adoc#prerequisites[Install Prerequisites]
 ** xref:module-02.adoc#container[Enable Container]
+
+* xref:step-01.adoc[Step 1 - Install IdM Server]
+** xref:step-01#inventory[Inventory file]
+** xref:step-01.adoc#playbook[Playbook]
+
+* xref:step-02.adoc[Step 2 - Install IdM Server]
+** xref:step-02#inventory[Inventory file]
+** xref:step-02.adoc#playbook[Playbook]
+
+* xref:step-03.adoc[Step 3 - Install IdM Server]
+** xref:step-03#inventory[Inventory file]
+** xref:step-03.adoc#playbook[Playbook]
+
+* xref:step-04.adoc[Step 4 - Install IdM Server]
+** xref:step-04#inventory[Inventory file]
+** xref:step-04.adoc#playbook[Playbook]
+
+* xref:step-05.adoc[Step 5 - Install IdM Server]
+** xref:step-05#inventory[Inventory file]
+** xref:step-05.adoc#playbook[Playbook]
+
+* xref:step-06.adoc[Step 6 - Final configuration]
+** xref:step-06#inventory[Inventory file]
+** xref:step-06.adoc#playbook[Playbook]
