--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -6,23 +6,23 @@
 ** xref:module-02.adoc#prerequisites[Install Prerequisites]
 ** xref:module-02.adoc#container[Enable Container]
 
-* xref:step-01.adoc[Step 1 - Install IdM Server]
+* xref:step-01.adoc[Step 1 - Install IdM server]
 ** xref:step-01#inventory[Inventory file]
 ** xref:step-01.adoc#playbook[Playbook]
 
-* xref:step-02.adoc[Step 2 - Install IdM Server]
+* xref:step-02.adoc[Step 2 - Configure IdM server]
 ** xref:step-02#inventory[Inventory file]
 ** xref:step-02.adoc#playbook[Playbook]
 
-* xref:step-03.adoc[Step 3 - Install IdM Server]
+* xref:step-03.adoc[Step 3 - Install IdM client]
 ** xref:step-03#inventory[Inventory file]
 ** xref:step-03.adoc#playbook[Playbook]
 
-* xref:step-04.adoc[Step 4 - Install IdM Server]
+* xref:step-04.adoc[Step 4 - Windows setup and AD trust]
 ** xref:step-04#inventory[Inventory file]
 ** xref:step-04.adoc#playbook[Playbook]
 
-* xref:step-05.adoc[Step 5 - Install IdM Server]
+* xref:step-05.adoc[Step 5 - Install IdM replica]
 ** xref:step-05#inventory[Inventory file]
 ** xref:step-05.adoc#playbook[Playbook]
 
