--- a/content/modules/ROOT/pages/step-04.adoc
+++ b/content/modules/ROOT/pages/step-04.adoc
@@ -7,7 +7,7 @@
 ----
     win:
       hosts:
-        winlocal.example.opentlc.com:
+        windows.example.com:
           ansible_connection: winrm
           ansible_winrm_server_cert_validation: ignore
           ansible_user: Administrator
@@ -41,22 +41,22 @@ all:
   children:
     win:
       hosts:
-        winlocal.example.opentlc.com:
+        windows.example.com:
           ansible_connection: winrm
           ansible_winrm_server_cert_validation: ignore
           ansible_user: Administrator
           ansible_password: "{{ ad_admin_password }}"
     ipaserver:      
       hosts: 
-        idm.{{ shortname }}.example.opentlc.com:
+        node1.{{ shortname }}.example.com:
     ipaclients:
       hosts: 
-        client9.{{ shortname }}.example.opentlc.com:
+        bastion.{{ shortname }}.example.com:
   vars:
 # Global variables
     admin_password: "{admin_pass}" # Administrator password used for all applications
-    root_domain: "example.opentlc.com" # Root domain (also used as Windows domain)
-    shortname: "{guid}" # Sub-domain
+    root_domain: "example.com" # Root domain (also used as Windows domain)
+    shortname: "idm" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
     third: "9" # Third octect of subnet used.
     user_password: "Redhat123"
@@ -90,8 +90,8 @@ all:
       - { idm_name: jsmith_idm, idm_first: John, idm_last: Smith, ipa_group: idm-admins }
       - { idm_name: sjones_idm, idm_first: Susan, idm_last: Jones, ipa_group: idm-admins }
     idp_admins: # IDP admins
-      - { idm_name: jsmith_azure, idm_first: John, idm_last: Smith, ipa_group: idm-admins, idp_ref: "Entra ID(Azure AD)", idp_name: "jsmith@example.opentlc.com", authtype: idp }
-      - { idm_name: sjones_azure, idm_first: Susan, idm_last: Jones, ipa_group: idm-admins, idp_ref: "Entra ID(Azure AD)", idp_name: "sjones@example.opentlc.com", authtype: idp }
+      - { idm_name: jsmith_azure, idm_first: John, idm_last: Smith, ipa_group: idm-admins, idp_ref: "Entra ID(Azure AD)", idp_name: "jsmith@example.com", authtype: idp }
+      - { idm_name: sjones_azure, idm_first: Susan, idm_last: Jones, ipa_group: idm-admins, idp_ref: "Entra ID(Azure AD)", idp_name: "sjones@example.com", authtype: idp }
 # IdM Group creation
     idm_groups:
       - { ipa_group: "idm-users", ipa_grpDesc: "IdM users group" }
@@ -103,7 +103,7 @@ all:
     idm_idp:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
 # IdM server DNS
-    idm_pri: "idm.{{ domain }}"
+    idm_pri: "node1.{{ domain }}"
     idm_DNS1: "192.168.{{ third }}.92" # primary IdM IP address
 # RHEL variables
     network_connections:
