--- a/content/modules/ROOT/pages/step-05.adoc
+++ b/content/modules/ROOT/pages/step-05.adoc
@@ -7,7 +7,7 @@
 ----
     ipareplicas:
       hosts: 
-        rep.{{ shortname }}.example.com:   
+        node2.{{ shortname }}.example.com:   
 ----
 === Additional variables
 [source,init,role=execute,subs=attributes+]
@@ -20,8 +20,8 @@
     ipareplica_firewalld_zone: public
 # IdM DNS
     idm_dns:
-      - { idm_srv: "idm.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.92 }}" }
-      - { idm_srv: "idm.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.93 }}" }
+      - { idm_srv: "node1.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.92 }}" }
+      - { idm_srv: "node1.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.93 }}" }
 ----
 === Current
 [source,init,role=execute,subs=attributes+]
@@ -30,25 +30,25 @@ all:
   children:
     win:
       hosts:
-        winlocal.example.com:
+        windows.example.com:
           ansible_connection: winrm
           ansible_winrm_server_cert_validation: ignore
           ansible_user: Administrator
           ansible_password: "{{ ad_admin_password }}"
     ipaserver:      
       hosts: 
-        idm.{{ shortname }}.example.com:
+        node1.{{ shortname }}.example.com:
     ipareplicas:
       hosts: 
-        rep.{{ shortname }}.example.com:    
+        node2.{{ shortname }}.example.com:    
     ipaclients:
       hosts: 
-        client9.{{ shortname }}.example.com:
+        bastion.{{ shortname }}.example.com:
   vars:
 # Global variables
     admin_password: "{admin_pass}" # Administrator password used for all applications
     root_domain: "example.com" # Root domain (also used as Windows domain)
-    shortname: "{guid}" # Sub-domain
+    shortname: "idm" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
     third: "9" # Third octect of subnet used.
     user_password: "Redhat123"
@@ -96,10 +96,10 @@ all:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
 # IdM DNS
     idm_dns:
-      - { idm_srv: "idm.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.92 }}" }
-      - { idm_srv: "idm.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.93 }}" }
+      - { idm_srv: "node1.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.92 }}" }
+      - { idm_srv: "node1.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.93 }}" }
 # IdM server DNS
-    idm_pri: "idm.{{ domain }}"
+    idm_pri: "node1.{{ domain }}"
     idm_DNS1: "192.168.{{ third }}.92" # primary IdM IP address
 # RHEL variables
     network_connections:
@@ -129,7 +129,7 @@ all:
       - { ad_name: aduser3, ad_first: AD, ad_last: User3 }
     ad_admin: "Administrator" # AD administrator name
     ad_admin_password: "{{ admin_password }}" # AD administrator password
-    idm_rep: "rep.{{ domain }}"
+    idm_rep: "node2.{{ domain }}"
     idm_DNS2: "192.168.{{ third }}.93" # replica IdM IP address
 ----
 
