--- a/content/modules/ROOT/pages/step-04.adoc
+++ b/content/modules/ROOT/pages/step-04.adoc
@@ -71,7 +71,7 @@ all:
     ipaserver_no_dnssec_validation: true
     ipaserver_netbios_name: "{{ shortname | upper }}"
     ipaserver_firewalld_zone: public
-    ipareplica_no_forwarders: true
+    ipaserver_forwarders: "192.168.0.2"
     ipareplica_setup_adtrust: true
     ipareplica_no_dnssec_validation: true
     ipareplica_setup_ca: true
