--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -26,4 +26,4 @@ We will cover:
 === Lab Access
 
 The terminal window to your right is *already* logged into the lab environment as the `{ssh_user}` user via `ssh`. 
-All steps of this lab are to be completed as the `{ssh_user}` user.
+All steps of this lab are to be completed as the `{ssh_user}` user on the bastion server.
