--- a/content/modules/ROOT/pages/step-04.adoc
+++ b/content/modules/ROOT/pages/step-04.adoc
@@ -103,9 +103,9 @@ all:
 # IdM IDP creation
     idm_idp:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
-# IdM server DNS
-    idm_pri: "node1.{{ domain }}"
-    idm_DNS1: "192.168.{{ third }}.92" # primary IdM IP address
+# IdM DNS
+    idm_dns:
+      - { idm_srv: "node1.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
 # RHEL variables
     network_connections:
     - name: "{{ ansible_default_ipv4.alias }}"
