--- a/content/modules/ROOT/pages/step-02.adoc
+++ b/content/modules/ROOT/pages/step-02.adoc
@@ -40,7 +40,7 @@ all:
         node1.{{ shortname }}.example.com:
   vars:
 # Global variables
-    admin_password: "{admin_pass}" # Administrator password used for all applications
+    admin_password: "{ssh_password}" # Administrator password used for all applications
     root_domain: "example.com" # Root domain (also used as Windows domain)
     shortname: "idm" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
