--- a/content/modules/ROOT/pages/step-01.adoc
+++ b/content/modules/ROOT/pages/step-01.adoc
@@ -13,7 +13,7 @@ all:
   children:
     ipaserver:
       hosts:
-        node1.{{ shortname }}.example.com:
+        idm-gui.{{ shortname }}.example.com:
 ----
 
 === Variable Section
@@ -33,7 +33,7 @@ all:
     ipaserver_setup_adtrust: true
     ipaserver_reverse_zones: "{{ third }}.168.192.in-addr.arpa"
     ipaserver_allow_zone_overlap: true
-    ipaserver_forwarders: "192.168.0.2"
+    ipaserver_no_forwarders: true
     ipaserver_forward_policy: first
     ipaserver_no_dnssec_validation: true
     ipaserver_netbios_name: "{{ shortname | upper }}"
