--- a/content/modules/ROOT/pages/step-03.adoc
+++ b/content/modules/ROOT/pages/step-03.adoc
@@ -7,7 +7,7 @@
 ----
     ipaclients:
       hosts: 
-        bastion.{{ shortname }}.example.com:
+        node2.{{ shortname }}.example.com:
 ----
 === Additional variables
 [source,init,role=execute,subs=attributes+]
@@ -35,10 +35,10 @@ all:
   children:
     ipaserver:      
       hosts: 
-        node1.{{ shortname }}.example.com:
+        idm-gui.{{ shortname }}.example.com:
     ipaclients:
       hosts: 
-        bastion.{{ shortname }}.example.com:
+        node2.{{ shortname }}.example.com:
   vars:
 # Global variables
     admin_password: "{ssh_password}" # Administrator password used for all applications
@@ -54,8 +54,7 @@ all:
     ipaserver_setup_adtrust: true
     ipaserver_reverse_zones: "{{ third }}.168.192.in-addr.arpa"
     ipaserver_allow_zone_overlap: true
-    ipaserver_forwarders: "192.168.0.2"
-    ipaserver_forward_policy: first
+    ipaserver_no_forwarders: true
     ipaserver_no_dnssec_validation: true
     ipaserver_netbios_name: "{{ shortname | upper }}"
     ipaserver_firewalld_zone: public
@@ -92,7 +91,7 @@ all:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
 # IdM DNS
     idm_dns:
-      - { idm_srv: "node1.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
+      - { idm_srv: "idm-gui.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
 # RHEL variables
     network_connections:
     - name: "{{ ansible_default_ipv4.alias }}"
@@ -103,7 +102,6 @@ all:
         dhcp4: false
         dns: 
           - "{{ idm_dns[0].idm_ip }}"
-          - 192.168.0.2
         address: "{{ ansible_default_ipv4.address }}/24"
         gateway4: "{{ ansible_default_ipv4.gateway }}"
 ----
