--- a/content/modules/ROOT/pages/step-06.adoc
+++ b/content/modules/ROOT/pages/step-06.adoc
@@ -18,13 +18,13 @@ all:
           ansible_password: "{{ ad_admin_password }}"
     ipaserver:      
       hosts: 
-        node1.{{ shortname }}.example.com:
+        idm-gui.{{ shortname }}.example.com:
     ipareplicas:
       hosts: 
-        node2.{{ shortname }}.example.com:    
+        node1.{{ shortname }}.example.com:    
     ipaclients:
       hosts: 
-        bastion.{{ shortname }}.example.com:
+        node2.{{ shortname }}.example.com:
   vars:
 # Global variables
     admin_password: "{ssh_password}" # Administrator password used for all applications
@@ -40,12 +40,11 @@ all:
     ipaserver_setup_adtrust: true
     ipaserver_reverse_zones: "{{ third }}.168.192.in-addr.arpa"
     ipaserver_allow_zone_overlap: true
-    ipaserver_forwarders: "192.168.0.2"
-    ipaserver_forward_policy: first
+    ipaserver_no_forwarders: true
     ipaserver_no_dnssec_validation: true
     ipaserver_netbios_name: "{{ shortname | upper }}"
     ipaserver_firewalld_zone: public
-    ipareplica_forwarders: "192.168.0.2"
+    ipareplica_no_forwarders: true
     ipareplica_setup_adtrust: true
     ipareplica_no_dnssec_validation: true
     ipareplica_setup_ca: true
@@ -78,8 +77,8 @@ all:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
 # IdM DNS
     idm_dns:
-      - { idm_srv: "node1.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.92 }}" }
-      - { idm_srv: "node1.{{ domain }}", idm_ip: "{{ 192.168.{{ third }}.93 }}" }
+      - { idm_srv: "idm-gui.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
+      - { idm_srv: "node1.{{ domain }}", idm_ip: "192.168.{{ third }}.93" }
 # IdM server DNS
     idm_pri: "node1.{{ domain }}"
     idm_DNS1: "192.168.{{ third }}.92" # primary IdM IP address
@@ -91,7 +90,7 @@ all:
       persistent_state: present
       ip:
         dhcp4: false
-        dns: "{{ idm_DNS1 }}"
+        dns: "{{ idm_dns[0].idm_ip }}"
         address: "{{ ansible_default_ipv4.address }}/24"
         gateway4: "{{ ansible_default_ipv4.gateway }}"
 ### Windows DNS
@@ -111,8 +110,6 @@ all:
       - { ad_name: aduser3, ad_first: AD, ad_last: User3 }
     ad_admin: "Administrator" # AD administrator name
     ad_admin_password: "{{ admin_password }}" # AD administrator password
-    idm_rep: "node2.{{ domain }}"
-    idm_DNS2: "192.168.{{ third }}.93" # replica IdM IP address
 ----
 
 [#playbook]
