updated for new primary server name.

--- a/content/modules/ROOT/pages/step-01.adoc
+++ b/content/modules/ROOT/pages/step-01.adoc
@@ -13,7 +13,7 @@ all:
   children:
     ipaserver:
       hosts:
-        idm-gui.{{ shortname }}.example.com:
+        idmsrv.{{ shortname }}.example.com:
 ----
 
 === Variable Section
