--- a/content/modules/ROOT/pages/step-02.adoc
+++ b/content/modules/ROOT/pages/step-02.adoc
@@ -37,7 +37,7 @@ all:
   children:
     ipaserver:      
       hosts: 
-        idm-gui.{{ shortname }}.example.com:
+        idmsrv.{{ shortname }}.example.com:
   vars:
 # Global variables
     admin_password: "{ssh_password}" # Administrator password used for all applications
