--- a/content/modules/ROOT/pages/step-05.adoc
+++ b/content/modules/ROOT/pages/step-05.adoc
@@ -20,7 +20,7 @@
     ipareplica_firewalld_zone: public
 # IdM DNS
     idm_dns:
-      - { idm_srv: "idm-gui.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
+      - { idm_srv: "idmsrv.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
       - { idm_srv: "node1.{{ domain }}", idm_ip: "192.168.{{ third }}.93" }
 ----
 === Current
@@ -37,7 +37,7 @@ all:
           ansible_password: "{{ ad_admin_password }}"
     ipaserver:      
       hosts: 
-        idm-gui.{{ shortname }}.example.com:
+        idmsrv.{{ shortname }}.example.com:
     ipareplicas:
       hosts: 
         node1.{{ shortname }}.example.com:    
@@ -97,7 +97,7 @@ all:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
 # IdM DNS
     idm_dns:
-      - { idm_srv: "idm-gui.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
+      - { idm_srv: "idmsrv.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
       - { idm_srv: "node1.{{ domain }}", idm_ip: "192.168.{{ third }}.93" }
 # RHEL variables
     network_connections:
