fixed some variables

--- a/content/modules/ROOT/pages/step-03.adoc
+++ b/content/modules/ROOT/pages/step-03.adoc
@@ -41,12 +41,13 @@ all:
         node2.{{ shortname }}.example.com:
   vars:
 # Global variables
-    admin_password: "{ssh_password}" # Administrator password used for all applications
+    admin_password: "{ssh_password}" # Administrator password used for all applications, recommened using Ansible vault in prod.
     root_domain: "example.com" # Root domain (also used as Windows domain)
     shortname: "idm" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
     third: "0" # Third octect of subnet used.
     user_password: "Redhat123"
+    idmpri_ip: "{idmsrv_ip}"
 # IdM variables
     ipaserver_domain: "{{ domain }}"
     ipaserver_realm: "{{ domain | upper }}"
@@ -91,7 +92,7 @@ all:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
 # IdM DNS
     idm_dns:
-      - { idm_srv: "idmsrv.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
+      - { idm_srv: "idmsrv.{{ domain }}", idm_ip: "{{ idmpri_ip }}" }
 # RHEL variables
     network_connections:
     - name: "{{ ansible_default_ipv4.alias }}"
