--- a/content/modules/ROOT/pages/step-06.adoc
+++ b/content/modules/ROOT/pages/step-06.adoc
@@ -33,6 +33,8 @@ all:
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
     third: "0" # Third octect of subnet used.
     user_password: "Redhat123"
+    idmpri_ip: "{idmsrv_ip}"
+    idmrep_ip: "{node1_ip}"
 # IdM variables
     ipaserver_domain: "{{ domain }}"
     ipaserver_realm: "{{ domain | upper }}"
@@ -77,8 +79,8 @@ all:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
 # IdM DNS
     idm_dns:
-      - { idm_srv: "idmsrv.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
-      - { idm_srv: "node1.{{ domain }}", idm_ip: "192.168.{{ third }}.93" }
+      - { idm_srv: "idmsrv.{{ domain }}", idm_ip: "{{ idmpri_ip }}" }
+      - { idm_srv: "node1.{{ domain }}", idm_ip: "{{ idmrep_ip }}" }
 # IdM server DNS
     idm_pri: "node1.{{ domain }}"
     idm_DNS1: "192.168.{{ third }}.92" # primary IdM IP address
