--- a/content/modules/ROOT/pages/step-05.adoc
+++ b/content/modules/ROOT/pages/step-05.adoc
@@ -54,6 +54,7 @@ all:
     user_password: "Redhat123"
     idmpri_ip: "{idmsrv_ip}"
     idmrep_ip: "{node1_ip}"
+    winsrv_ip: "{windows_ip}"
 # IdM variables
     ipaserver_domain: "{{ domain }}"
     ipaserver_realm: "{{ domain | upper }}"
@@ -99,8 +100,8 @@ all:
       - { idp_name: "Entra ID(Azure AD)", idp_provider: "microsoft", idp_clientid: "Test", idp_secret: "Test", idp_org: "Test" }
 # IdM DNS
     idm_dns:
-      - { idm_srv: "idmsrv.{{ domain }}", idm_ip: "192.168.{{ third }}.92" }
-      - { idm_srv: "node1.{{ domain }}", idm_ip: "192.168.{{ third }}.93" }
+      - { idm_srv: "idmsrv.{{ domain }}", idm_ip: "{{ idmpri_ip }}" }
+      - { idm_srv: "node1.{{ domain }}", idm_ip: "{{ idmrep_ip }}" }
 # RHEL variables
     network_connections:
     - name: "{{ ansible_default_ipv4.alias }}"
@@ -113,7 +114,7 @@ all:
         address: "{{ ansible_default_ipv4.address }}/24"
         gateway4: "{{ ansible_default_ipv4.gateway }}"
 ### Windows DNS
-    ad_ip: "192.168.{{ third }}.5" # AD IP
+    ad_ip: "{{ winsrv_ip }}" # AD IP
 # Windows variables
     ad_netbios: "EXAMPLE"
 ## AD Enterprise User/Group Creation
