--- a/content/modules/ROOT/pages/step-06.adoc
+++ b/content/modules/ROOT/pages/step-06.adoc
@@ -35,6 +35,7 @@ all:
     user_password: "Redhat123"
     idmpri_ip: "{idmsrv_ip}"
     idmrep_ip: "{node1_ip}"
+    winsrv_ip: "{windows_ip}"
 # IdM variables
     ipaserver_domain: "{{ domain }}"
     ipaserver_realm: "{{ domain | upper }}"
@@ -96,7 +97,7 @@ all:
         address: "{{ ansible_default_ipv4.address }}/24"
         gateway4: "{{ ansible_default_ipv4.gateway }}"
 ### Windows DNS
-    ad_ip: "192.168.{{ third }}.5" # AD IP
+    ad_ip: "{{ winsrv_ip }}" # AD IP
 # Windows variables
     ad_netbios: "EXAMPLE"
 ## AD Enterprise User/Group Creation
