fixed some variables for windows and admin passwords

--- a/content/modules/ROOT/pages/step-04.adoc
+++ b/content/modules/ROOT/pages/step-04.adoc
@@ -56,7 +56,8 @@ all:
         node2.{{ shortname }}.example.com:
   vars:
 # Global variables
-    admin_password: "{ssh_password}" # Administrator password used for all applications
+    admin_password: "Redhat123!" # Administrator password used for all applications
+    ad_admin_password: "{ssh_password}"
     root_domain: "example.com" # Root domain (also used as Windows domain)
     shortname: "idm" # Sub-domain
     domain: "{{ shortname }}.{{ root_domain }}" # Full domain name
@@ -136,7 +137,7 @@ all:
       - { ad_name: aduser2, ad_first: AD, ad_last: User2 }
       - { ad_name: aduser3, ad_first: AD, ad_last: User3 }
     ad_admin: "Administrator" # AD administrator name
-    ad_admin_password: "{{ admin_password }}" # AD administrator password
+    ad_admin_password: "{{ ad_admin_password }}" # AD administrator password
 ----
 
 [#playbook]
