--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -27,3 +27,7 @@ We will cover:
 
 The terminal window to your right is *already* logged into the lab environment as the `{ssh_user}` user via `ssh`. 
 All steps of this lab are to be completed as the `{ssh_user}` user on the bastion server.
+
+To access the IdM GUI once you have installed it in `Step 1`, you will need to open a browser, got to settings, type "proxy" in the search bar in the top right corner and click settings. Select "Manual proxy configuration" and go to "SOCKS Host" and put in localhost and for the "Port" put in 5060. Finally check the checkbox for "Proxy DNS when using SOCKS v5".
+
+Finally you will need to open a terminal window and ssh -D 5060 -C -N {ssh_command}
